--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -8,12 +8,31 @@
 
 }
 
+  .searchContainer {
+    display: flex;             
+    align-items: center;       
+    justify-content: flex-start; 
+    width: 100%;         
+  }
+  
+  .searchBar {
+    padding: 12px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 25px;
+    width: 300px;             
+    transition: border-color 0.3s ease;
+    outline: none;        
+    margin-top: 20px;          
+  }
+
 .title{
     max-width: 300px;
     max-height: 300px;
     width: 100%;
     height: 100%;
     margin-bottom: 80px;
+    margin-top: -90px;
 }
 .card-img-top{
     background-image: url("/assets/media/indexBackground.jpg");
@@ -74,4 +93,44 @@ img{
     font-size: 1rem;
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+
+.arrow-button {
+    background-color: #efc306;
+    color: #1d2b5d;
+    border: none;
+    padding: 12px 20px;
+    font-size: 40px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+}
+
+/* Arrow */
+#next::after {
+    content: "➜";
+    font-size: 40px;
+}
+
+#previous::after {
+    content: "➜";
+    font-size: 40px;
+    transform: rotate(180deg);
+}
+
+.arrow-button:hover {
+    background-color: #efc306;
+    transform: scale(1.05);
+}
+
+.buttons{
+    display: inline-flex;
+    flex-direction: row;
+    gap: 80px;
+    width: 100%;
+    margin-top: 20px;
 }
